--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@
 <head>
 	<title>Parcel Sandbox</title>
 	<meta charset="UTF-8" />
-	script(src="/sandbox/src/js.js") 
+	script(src="js.js") 
 	
 </head>
 
